infra/frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: namespace
